Fix navbar hover; Fix ctaCards animation on mobile; Add cardsGrid component on cardsWithVideoSection

--- a/components/C01-Navigation/M-SubMenu/MSubMenu.module.scss
+++ b/components/C01-Navigation/M-SubMenu/MSubMenu.module.scss
@@ -7,7 +7,7 @@
   opacity: 0;
   visibility: collapse;
   overflow: hidden;
-  transition: opacity .65s, visibility .65s, max-height .6s, padding .6s;
+  transition: opacity .65s, visibility .65s, max-height .6s, padding .5s ease-in-out;
 
   &.isOpen {
     opacity: 1;
@@ -29,7 +29,7 @@
 
     &.isWrapped {
       flex-wrap: wrap;
-      max-width: 80%;
+      max-width: 85%;
     }
   }
 }
@@ -49,7 +49,7 @@
   }
 
   @include respond-to(minWidth768) {
-    padding: 10px 34px 6px 0;
+    padding: 10px 42px 6px 0;
 
     &:last-of-type {
       padding-right: 0;
