--- a/styles/types/_types.scss
+++ b/styles/types/_types.scss
@@ -28,6 +28,18 @@
   }
 }
 
+@mixin bold-36 {
+  color: $gray-3;
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 35px;
+
+  @include respond-to(minWidth1024) {
+    font-size: 36px;
+    line-height: 45px;
+  }
+}
+
 @mixin bold-70 {
   color: $blue;
   font-size: 41px;
